docs: make the status file enough to rebuild the context from
The file described the outcome but assumed the reader already knew the
subject. It now starts from what this is and why, names the versions and
commands, and states the conventions the build enforces.

The largest addition is a section of facts that each cost real effort to
establish and are invisible in the code that resulted from them: that
loadChunk is synchronous and parallelism comes from the caller, that Palette
is sealed while Light is not, that the adventure-nbt array iterators skip
their last element, that a registry lookup in a constructor makes a type
untestable. Someone picking this up without them would rediscover them the
same slow way.

Also records the decisions that shape the rest, a file map with a reading
order, and links to the published charts.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>